more legit file
more legit file

--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-<h1>Perluete.org</h1>
-<h2></h2>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>title</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+  </head>
+  <body>
+
+    <h1>Perluete.org</h1>
+    <h2>En construction</h2>
+    <h3>contact@perluete.org</h3>
+
+
+  </body>
+</html>
+
+
