--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-
+    <div class="construction"></div>
     <h1>Perluete.org</h1>
     <h2>En construction</h2>
     <h3>contact@perluete.org</h3>
