--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <div class="construction"></div>
-    <h1>Perluete.org</h1>
-    <h2>En construction</h2>
-    <h3>contact@perluete.org</h3>
-
+    <div class="blockTxt">
+      <h1>Perluete.org</h1>
+      <h2>En construction</h2>
+      <h3>contact@perluete.org</h3>
+    </div>
 
   </body>
 </html>
