--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div class="construction"></div>
+    <div class="construction">
+    <img src="construction.jpg"/>
+    </div>
     <div class="blockTxt">
       <h1>Perluete.org</h1>
       <h2>En construction</h2>
