--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Perluete.org</title>
+    <title>Shango, Québec</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div class="construction">
-    <img src="construction.jpg"/>
+    <img src="shango.jpg"/>
     </div>
     <div class="blockTxt">
-      <h1>Perluete.org</h1>
-      <h3>contact@perluete.org</h3>
+      <h1>Dj shango</h1>
+      <h3></h3>
+      <a href="https://www.facebook.com/djshango604/">Contact</a> 
     </div>
 
   </body>
